2013-03-11 Ivan Kartolo <ivan@kartolo.de>
	* Bug #46087: Fixed how the jumpurl is redirected to TYPO3. Thanks to Peter Niederlag
	* Release 3.0.4

2013-01-21 Ivan Kartolo <ivan@kartolo.de>
	* Bug #44579: Fixed date picker in the wizard.

2013-01-18 Ivan Kartolo <ivan@kartolo.de>
	* Bug #44588: updated TCA

2012-12-27 Ivan Kartolo <ivan@kartolo.de>
	* Fixed typo in extension config
	* Release 3.0.3

2012-12-11 Ivan Kartolo <ivan@kartolo.de>
	* Bug #43064: check if array is given in get_localized_categories userFunc.
	* Bug #42544: bug fixed wrong link scheme if TYPO3 BE is https

2012-12-09 Ivan Kartolo <iva@kartolo.de>
	* Bug #41340: fixed recipient header if no name is given
	* Bug #41480: message ID uses the host name

2012-12-05 Ivan Kartolo <ivan@kartolo.de>
	* Bug #38905: background image from table, tr or td tag can now be embedded in the newsletter
	* Bug #41536: bug fix on using the domain for internal links

2012-11-11 Ivan Kartolo <ivan@kartolo.de>
	* Bug #39883: using getURL to fetch attachment and embedded media
	* Bug #42107: don't set ReplyTo if it's empty

2012-10-04 Ivan Kartolo <ivan@kartolo.de>
	* Bug #39422: fixed dmailerping not counted in statistic module

2012-07-11 Ivan Kartolo <ivan@kartolo.de>
	* Bug #37781: added bounce reason
	* Bug #37989: fixed file operation permission for non-admin in importer

2012-07-04 Ivan Kartolo <ivan@kartolo.de>
	* Bug #38003: hide query editor if user doesn't have right to the recipient table
	* Bug #38232: fixed fetching included media from the wrong FE path

2012-07-01 Ivan Kartolo <ivan@kartolo.de>
	* Bug #38479: fixed recursively added media (thx to Tom)
	* Bug #38003: remove the edit link of recipient list, if the user doesn't have the right to the table

2012-06-08 Ivan Kartolo <ivan@kartolo.de>
	* Bug #37821: fixed utf-8 problem in subject

2012-06-06 Ivan Kartolo <ivan@kartolo.de>
	* remove deprecated dmailer.phpsh

2012-06-04 Ivan Kartolo <ivan@kartolo.de>